test/tests/coll/syntax_03p/jastadd.err.expected
Problems during JRAG parsing:
Error at tests/coll/syntax_02f/Test.jrag:6:49: unexpected token "root":
  coll Collection<B> A.set() [new HashSet<B>()] root add with A;
                                                ^^^^
